# MaterialRally

./: .azure-pipelines.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  info.json
CMake/: QtStaticCMake.cmake  QtWasmCMake.cmake
gallery/: BlankPage.qml  CMakeLists.txt  PresentMain.qml  Presenter.qml  main.cpp  main.qml  resources.qrc
hostProfiles/: raspberrypios-buster.profile
src/: CMakeLists.txt  main.cpp  materialrallyplugin.cpp  materialrallyplugin.h  rootitemattachedtype.cpp  rootitemattachedtype.h  settings.cpp  settings.h  units.cpp  units.h  wheelhandler.h
src/Gallery/: ButtonsGallery.qml  ListsGallery.qml  TestDialog.qml  main.qml
src/MaterialRally/: BusyAction.qml  ComboBox.qml  Dialog.qml  Divider.qml  FormLayout.qml  GridLayout.qml  GroupBox.qml  Helper.qml  Icon.qml  IconLabel.qml  InfoDialog.qml  InlineMessage.qml  ItemDelegate.qml  ListView.qml  PasswordTextField.qml  Popup.qml  RallyApplicationWindow.qml  RallyRootPage.qml  ScrollView.qml  ScrollablePage.qml  TabBarFolding.qml  TabButtonFolding.qml  TextField.qml  ToolBar.qml  ToolButton.qml  helper.js
src/MaterialRally/private/: RefreshableScrollView.qml  ScrollViewBase.qml  ScrollablePageBase.qml
src/controls/: Button.qml  GridLayout.qml  GroupBox.qml  IconLabel.qml  InfoDialog.qml  InlineMessage.qml  RallyApplicationWindow.qml  RallyRootPage.qml  ScrollablePage.qml  TextArea.qml
src/controls/private/: RefreshableScrollView.qml  ScrollViewBase.qml  ScrollablePageBase.qml
src/gallery/: ButtonsGallery.qml  CMakeLists.txt  ListsGallery.qml  fileloader.cpp  fileloader.h  main.cpp  main.qml
